--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <meta name="twitter:description" content="Space Tourism Website Solution is an organization that aim a high goal for people and give them a chance to have a trip in space.">
     <meta name="twitter:image" content="http://www.spacetourismsolution/assests/img.pages.dev">
     <!-- fav -->
-    <link rel="icon" href="/assets/hoobank.589b8b38.png" type="image/x-icon">
-    <link rel="shortcut icon" href="/assets/hoobank.589b8b38.png" type="image/x-icon">
-    <script type="module" crossorigin src="/assets/index.6755bf67.js"></script>
-    <link rel="stylesheet" href="/assets/index.0d053b5a.css">
+    <link rel="icon" href="/hoobank/assets/hoobank.589b8b38.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/hoobank/assets/hoobank.589b8b38.png" type="image/x-icon">
+    <script type="module" crossorigin src="/hoobank/assets/index.6755bf67.js"></script>
+    <link rel="stylesheet" href="/hoobank/assets/index.0d053b5a.css">
   </head>
   <body>
     <div id="root"></div>
